<resources>
    <string name="app_name">Ganki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tree">体系</string>
    <string name="project">项目</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="app">application</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hot">热点</string>
    <string name="main">推荐</string>
    <string name="login">登录</string>
</resources>
